[package]
name = "automove"
version = "1.0.6"
edition = "2021"
license = "MIT"
categories = ["command-line-utilities"]
repository = "https://github.com/Narfinger/automove"
description = "Moves files that match a certain pattern described in move.toml into a subdirectory."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.56"
serde = "1.0.136"
serde_derive = "1.0.136"
toml = "0.5.8"
